[gd_scene load_steps=6 format=3 uid="uid://khus3bk50yi1"]

[ext_resource type="Script" uid="uid://r4iec8ukai7n" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="Texture2D" uid="uid://dqdi7apjn851m" path="res://assets/grass.png" id="2_0xm2m"]
[ext_resource type="Texture2D" uid="uid://bertl03eoaydo" path="res://assets/fertilizer.png" id="3_h2yge"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h2yge"]
bg_color = Color(0.0941176, 0.0941176, 0.145098, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.192157, 0.196078, 0.266667, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0xm2m"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ig7tw")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 16.0
offset_top = 8.0
offset_right = -200.0
offset_bottom = 42.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Grass: 0"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -264.0
offset_top = 8.0
offset_right = -16.0
offset_bottom = 240.0
grow_horizontal = 0

[node name="Msg" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Click the Grass!"
horizontal_alignment = 1

[node name="TextureButton" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
texture_normal = ExtResource("2_0xm2m")
ignore_texture_size = true
stretch_mode = 0

[node name="PerSec" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "5 grass per second"
horizontal_alignment = 1

[node name="SecondTimer" type="Timer" parent="."]
autostart = true

[node name="Upgrades" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 64.0
offset_right = 352.0
offset_bottom = -64.0
grow_vertical = 2

[node name="Template" type="PanelContainer" parent="Upgrades"]
visible = false
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_h2yge")

[node name="HBoxContainer" type="HBoxContainer" parent="Upgrades/Template"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Upgrades/Template/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_h2yge")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Upgrades/Template/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -5
alignment = 1

[node name="Name" type="Label" parent="Upgrades/Template/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Fertilizer"

[node name="PerSec" type="Label" parent="Upgrades/Template/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "+1 per second"

[node name="Price" type="Label" parent="Upgrades/Template/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "100"
horizontal_alignment = 2

[node name="GrassIcon" type="TextureRect" parent="Upgrades/Template/HBoxContainer"]
custom_minimum_size = Vector2(32, 24)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_0xm2m")
expand_mode = 1
stretch_mode = 4

[node name="Button" type="Button" parent="Upgrades/Template"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_0xm2m")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_0xm2m")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_0xm2m")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_0xm2m")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_0xm2m")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_0xm2m")
theme_override_styles/hover = SubResource("StyleBoxEmpty_0xm2m")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_0xm2m")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0xm2m")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_0xm2m")
theme_override_styles/normal = SubResource("StyleBoxEmpty_0xm2m")

[connection signal="pressed" from="VBoxContainer/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="timeout" from="SecondTimer" to="." method="_on_second_timer_timeout"]
